--- a/renderer/public/styles/global.css
+++ b/renderer/public/styles/global.css
@@ -1,3 +1,28 @@
 html, body {
     height: 100%;
 }
+.btn-outline-twitch {
+    color: #7A2FE7;
+    border-color: #7A2FE7;
+}
+
+.btn-outline-twitch:hover {
+    color: #fff;
+    background-color: #7A2FE7;
+    border-color: #7A2FE7;
+}
+
+.btn-outline-twitch:focus, .btn-outline-twitch.focus {
+    box-shadow: 0 0 0 0.2rem rgba(122, 50, 231, 0.5);
+}
+
+.btn-outline-twitch.disabled, .btn-outline-twitch:disabled {
+    color: #7A2FE7;
+    background-color: transparent;
+}
+
+.btn-outline-twitch:not(:disabled):not(.disabled):active, .btn-outline-twitch:not(:disabled):not(.disabled).active, .show>.btn-outline-twitch.dropdown-toggle {
+    color: #fff;
+    background-color: #7A2FE7;
+    border-color: #7A2FE7;
+}
